@@ -1,4 +1,4 @@
 DIST ghostscript-fonts-std-8.11.tar.gz 3752871 RMD160 10a19a10d0388bc084a7c1d3da845068d7169054 SHA1 2a7198e8178b2e7dba87cb5794da515200b568f5 SHA256 0eb6f356119f2e49b2563210852e17f57f9dcc5755f350a69a46a0d641a0c401
-EBUILD gnu-gs-fonts-std-8.11.ebuild 717 RMD160 5587b64025bb077cc98d797a032db015cc1bb156 SHA1 63c6071e3fc5e071fc2549a5b20126f2a237d5f3 SHA256 affc7d629714d2e19bf4a8c0eff693fac77f8ca437671dc7111e5c47d61939e8
-MISC ChangeLog 1682 RMD160 0159afcb2076f56f5fe535ae4a3431c6e8b0f7f5 SHA1 26eadc1b988e4581aedd7bc3f20aacbe52af9ab9 SHA256 eefc9ed4a4b973f63bad7b54566bf183974f12b63b4d72a9c491eee9d4d8d391
+EBUILD gnu-gs-fonts-std-8.11.ebuild 716 RMD160 441467b838a61870bacc9aac8fe1ba7fd9c3a120 SHA1 1e714cde4e91aa02cb033aaa18835f89883823c5 SHA256 9a0aec436207f2dd841a80572c4d5a5cb5089527531b9ba7f055c9b4fbd0804f
+MISC ChangeLog 1801 RMD160 0ecb7ed167e8b9136266625c6e87b9a63ee8a990 SHA1 191a666f3c180fb1b0ab840fbc73b2ce1c8e427a SHA256 227f20b710348ce4bd2abceb36b36e632f335119e672fe651256399d415f09b7
 MISC metadata.xml 161 RMD160 1e5b1e42553c8869b93c4a5448e9a2a2ed9fe525 SHA1 209c6a46e4cdd891980115e42ba419e3799f8088 SHA256 7c85e6739a71f5bb23e8de36c88677d772946e61f7285892f7554e37bd2bca76
