@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/gnu-gs-fonts-std/gnu-gs-fonts-std-8.11.ebuild,v 1.10 2007/07/12 10:09:18 uberlord Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/gnu-gs-fonts-std/gnu-gs-fonts-std-8.11.ebuild,v 1.11 2009/10/27 21:19:16 bangert Exp $
 
 MY_PN=ghostscript-fonts-std
 MY_P=${MY_PN}-${PV}
@@ -9,7 +9,7 @@ DESCRIPTION="Ghostscript Standard Fonts"
 HOMEPAGE="http://www.cups.org/"
 SRC_URI="mirror://sourceforge/ghostscript/${MY_P}.tar.gz"
 
-LICENSE="GPL-1"
+LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
